# smart_street_lighting_plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
src/smart_street_lighting/: __init__.py  _defaults.py
src/smart_street_lighting/engine/: __init__.py  calc.py
src/smart_street_lighting/llm/: __init__.py  lm_studio.py
src/smart_street_lighting/osm/: __init__.py  client.py  geometry.py
src/smart_street_lighting/rag/: __init__.py  bootstrap.py  pipeline.py
tests/: test_bootstrap.py  test_defaults.py  test_engine.py  test_geometry.py
